# library_project

./: .env.example  .gitignore  DEPLOY_RENDER.md  Makefile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
apps/catalog/: admin.py  models.py  tests.py  urls.py  views.py
apps/catalog/management/commands/: apply_online_covers.py  seed_demo_data.py
apps/catalog/migrations/: 0001_initial.py  0002_book_year.py  0003_book_cover.py
apps/loans/: admin.py  models.py  tests.py  urls.py  views.py
apps/loans/migrations/: 0001_initial.py  0002_unique_active_loan_per_book_instance.py
apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/users/management/commands/: ensure_superuser.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: base.html
templates/catalog/: author_detail.html  author_list.html  book_detail.html  book_list.html  index.html
templates/loans/: on_loan_report.html  overdue_report.html
templates/registration/: login.html  signup.html
templates/users/: profile.html
