[project]
name = "library-project"
version = "0.1.0"
description = "Django web application for library catalog, readers, loans, and returns"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.2.9",
    "gunicorn>=22.0.0",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.7.0",
]
